cluster/n8n-cluster/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: digicon
spec:
  type: LoadBalanvcer
  selector:
    app: nginx
  ports:
    - port: 8080        # service port (external)
      targetPort: 80     # container internal port
      nodePort: 30080    # NodePort (optional, manually set)
